[package]
name = "kathe"
version = "0.1.0"
edition = "2021"
authors = ["avuko"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.10"
# clap = { version = "3.0.11", features = ["derive"] }
clap = {version = "~3.1.2", features = ["derive", "yaml"]}
ssdeep = "0.2.0"
redis = "0.21.5"
